fix date pickr alignment on new review page

--- a/ent-talent-mgmt/src/main/webapp/assets/styles/md-date-picker-container.css
+++ b/ent-talent-mgmt/src/main/webapp/assets/styles/md-date-picker-container.css
@@ -1,3 +1,7 @@
+.etm-datepicker-container{
+  margin: 18px 0px;
+}
+
 .etm-datepicker-container [ng-message="required"] {
     color: rgb(221,44,0);
     font-size: 12px;
